		bogus sector specials. [Dusk]
	- Fixed: Red Obelisk MCT actor was in the wrong place altogether. [Dusk]
- Added AOW11: Disk Defrag, with updated texturing. [Dusk]
- Fixed Jumpjet HUD display. [Thetis, Dusk]
- Fixed: Full refill did not refill jetpack fuel. [Dusk]
- AI Marines are now colored and named properly based on team. [Thetis, Dusk]

================================================================================
-- Changes since r234
================================================================================
- Crushed a shotgun reload sprite clipping issue like a grape!!!!!! (also made them look a bit better) [Bloax]
- Fixed opaque guardian sprite [Bloax]
- Added +FORCEXYBILLBOARD to puff actors [Cyberkill]

================================================================================
-- Changes since r200
================================================================================
- Nerfed the flamethrower. [Cyberkill]
- Made Technician have 2 C4 and 4 proxy mines again. [Dusk]
- Hopefully fixed problems with the credits/exp HUD. [Dusk]
- Pulled the Gauss rifle from the dropped SVN version (did you know this is very painful to update). [Bloax]
	- Made red gauss rifle puff translate properly to red. [Dusk]
- Messed with the colormap, now greens, blues and oranges have three/two/three (mostly) fullbright colors, namely the brightest ones.
- Made razor-wire hurt enemy players and enemy players only. [Dusk]
- The War Factory hanger now thrust mechs out harder, on some maps the newly bought mechs could get crushed. [Dusk]
- Made the 5-minute C4 delay apply to the +1 C4 research rather than the C4 itself. [Dusk]
- Fixed the C4 positioning issue ... [Bloax]
- AOW02:
	- Fixed: Northern tunnel didn't have its tiberium field tagged properly. [Dusk]
	- Corrected a bunch of cosmetic errors. [Dusk]
- Corrected laser chaingun rail color. [Dusk]
- Made repairgun puffs use the right sprites [Cyberkill]
- Fixed repairgun puff variant sprites. [Bloax]