@@ -6,3 +6,4 @@ TEMPFILE
 tmp
 *.wad.backup*
 *.wad.bak
+acschangelog
